--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
         <h3><i>by Alexandra Burtis-Wyant</i></h3>
         <br/>
         <h2><b><u>About the sport</u></b></h2>
-        <br/>
-        <p style="width: 50%; border: 3px dotted darkviolet;"><i>Soccer is a world wide sport. </i>
+        <p style="width: 100%; border: 3px dotted darkviolet;"><i>Soccer is a world wide sport. </i>
         <i>Typically, you play with 10 players on the field and a goalkeeper. </i>
         <i>There are different types of formations, but they are all used for different reasons.</i></p>
         <br/>
         <h4> Here are some examples of a couple formations:</h4>
-        <img src="4-3-3formation.jpg" alt="4-3-3 formation" style="height:71%; float:left; "/>
-        <img src="3-5-2formation.png" alt="3-5-2 formation" style="height:71%; float:right"/> 
-        <img src="4-4-2formation.png" alt="4-4-2 formation" style="height:71%;"/>
+        <img src="4-3-3formation.jpg" alt="4-3-3 formation" style="height:38%; float:left; "/>
+        <img src="3-5-2formation.png" alt="3-5-2 formation" style="height:38%; float:right"/> 
+        <img src="4-4-2formation.png" alt="4-4-2 formation" style="height:38%; float:center"/>
     </body>
 </html>
