--- a/index.html
+++ b/index.html
@@ -24,6 +24,30 @@
         <i>Typically, you play with 10 players on the field and a goalkeeper. </i>
         <i>There are different types of formations, but they are all used for different reasons.</i></p>
         <br/>
+        <h4><b><u>Positions</u></b></h4>
+        <table>
+	       <tr>
+		      <th>categories</th>
+               <th>number</th>
+            </tr>
+            <tr>
+              <td>goalkeeper</td>
+              <td>1</td>
+            </tr>
+            <tr>
+		      <td>defenders</td>
+              <td>4,5 (centerbacks) and 2,3 (outside backs/full backs)</td>
+            </tr>
+	       <tr>
+		      <td>midfielders</td>
+              <td>6,8 and 10 (center midfielders) </td>
+               
+	       <tr>
+		      <td>forwards</td>
+              <td>7,11 (outside forwards/wingers) and 9 (center forward)</td>
+	       </tr>
+        </table>
+        <br/>
         <h4> Here are some examples of a couple formations:</h4>
         <img src="4-3-3formation.jpg" alt="4-3-3 formation" style="height:38%; float:left; "/>
         <img src="3-5-2formation.png" alt="3-5-2 formation" style="height:38%; float:right"/> 
