--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <h3><i>by Alexandra Burtis-Wyant</i></h3>
         <br/>
         <h2><b><u>About the sport</u></b></h2>
-        <p style="width: 100%; border: 3px dotted darkviolet;"><i>Soccer is a world wide sport. </i>
-        <i>Typically, you play with 10 players on the field and a goalkeeper. </i>
-        <i>There are different types of formations, but they are all used for different reasons.</i></p>
+        <p style="width: 100%; border: 3px dotted darkviolet;">Soccer is a world wide sport. 
+        Typically, you play with 10 players on the field and a goalkeeper. 
+        There are different types of formations, but they are all used for different reasons.
         <br/>
         <h4><b><u>Positions</u></b></h4>
         <table>
