--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <li><a href="pages/aboutme.html">About</a></li>
         </ul>
         </div>
-        <h1><b><u>Soccer</u></b></h1>
+        <h1><b>Soccer &#9917 </b></h1>
         <h3><i>by Alexandra Burtis-Wyant</i></h3>
         <br/>
-        <h2><b><u>About the sport</u></b></h2>
+        <h2><b>About the sport</b></h2>
         <p style="width: 100%; border: 3px dotted darkviolet;">Soccer is a world wide sport. 
         Typically, you play with 10 players on the field and a goalkeeper. 
         There are different types of formations, but they are all used for different reasons.
