--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -11,7 +11,7 @@
         <li><a id="active" href="aboutme.html">About</a></li>
         </ul>
         </div>
-    <h1><b><u> Stuff About Me</u></b></h1>
+    <h1><b> Stuff About Me &#128516 </b></h1>
     <h3><i>by Alexandra Burtis-Wyant</i></h3>
     <p style="width: 100%; border: 3px dotted darkviolet;">My name is Alexandra Burtis-Wyant but most call me Alex. I am 14 and in 9th grade. I have played soccer since the age of six  and I have played for about three differents clubs. The current club that I play for is called New York Surf Soccer Club, and I play as the outside midfielder/forward. I also play school soccer at The Waldorf School of Garden City. Both of my parents played soccer in college and one of my parents played on the first womens national team as a goalkeeper. My favorite player on the womens national team is Kelley O'Hara, and i've also met pretty much all of the womens national team players. I have had some amazing experiences that have to do with soccer. I absolutely love the game and it's so much fun to play. </p>
         
