--- a/index.html
+++ b/index.html
@@ -52,5 +52,11 @@
         <img src="4-3-3formation.jpg" alt="4-3-3 formation" style="height:38%; float:left; "/>
         <img src="3-5-2formation.png" alt="3-5-2 formation" style="height:38%; float:right"/> 
         <img src="4-4-2formation.png" alt="4-4-2 formation" style="height:38%; float:center"/>
+       
+        <!--Video will be added soon. -->
+        <video width="" height="" controls> 
+            <source src=".mov" type="video/mov">
+            Your browser does not support the video tag. 
+        </video>
     </body>
 </html>
