--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <img src="3-5-2formation.png" alt="3-5-2 formation" style="height:38%; float:right"/> 
         <img src="4-4-2formation.png" alt="4-4-2 formation" style="height:38%; float:center"/>
        
-        <!--Video will be added soon. -->
-        <video width="" height="" controls> 
-            <source src=".mov" type="video/mov">
+        <h4> Here is a short video on some amazing goals by the USWNT</h4>
+        <video width="100%" height="100%" controls> 
+            <source src="My Movie.mp4" type="video/mp4">
             Your browser does not support the video tag. 
         </video>
     </body>
